--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Titillium Web', sans-serif;
     text-rendering: optimizeLegibility;
     line-height: 1.3;
+    font-size: 1.6rem;
 }
 ul li {
     list-style-type: none;
@@ -65,6 +66,12 @@ h3{
     text-transform: uppercase;
     font-weight: 600;
     color: #fff;
+}
+.h4{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-top: 2.5rem;
 }
 .box{
     padding: 1%;
@@ -253,3 +260,75 @@ background: #393939;
 transform: rotate(360deg);
 }
 /* <!-- Team-section ends here --> */
+
+/* =============== */
+/* skill section starts here */
+/* =============== */
+.skill-section{
+    text-align: center;
+    background:linear-gradient(rgba(231, 241, 248, 0.9), rgba(231, 241, 248, 0.9)), url(img/skill-bg.jpg);
+}
+
+svg.web-design circle{
+    stroke: #30bae7;
+}
+svg.html-css circle{
+    stroke: #d74680;
+}
+svg.graphic-design circle{
+    stroke: #15c7a8;
+}
+svg.ui-ux circle{
+    stroke: #eb7d4b;
+}
+/* =============== */
+/* header Component */
+/* =============== */
+.portfolio-section{
+    background: linear-gradient(rgba(255,221,153,0.9), rgba(255,221,153,0.9)), url(img/portfolio-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    text-align: center;
+
+}
+.portfolio-section h2{
+    color: #3c4761;
+    text-align: center;
+}
+.portfolio-section h2::after{
+    background: #e5c37f;
+}
+.portfolio-filter{
+    margin: 4.5rem 0;
+}
+.portfolio-filter button{
+    background: #ebc985;
+    font-size: 1.8rem;
+    padding: 1rem 2rem;
+    border: 0;
+    border-radius: 0.5rem;
+    text-transform: uppercase;
+    color: #3c4761;
+    margin: 0 0.5rem;
+    transition: .5s;
+}
+.portfolio-filter button:hover{
+    cursor: pointer;
+    box-shadow: inset 0 .3rem .5rem rgba(60, 71, 97, 0.5);
+}
+.portfolio-image{
+    width: 100%;
+    height: 30rem;
+}
+.portfolio-section .col:nth-child(3){
+    margin-left: 0;
+}
+.portfolio-section .btn-load-more{
+    background: #17c2a4;
+    border-color: #14a58c;
+}
+.portfolio-section .mixitup-control-active{
+    background: #fff;
+}
