--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -161,8 +161,16 @@ header{
 .main-nav li:hover a:visited{
     background: rgba(100, 58, 121, 1);
 }
-.active{
-    background: rgb(74, 122, 126);
+.main-nav li.active a {
+    background: rgb(100, 58, 121, 1);
+}
+/* //stcky navigation// */
+.stcky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(135, 80, 156, 0.9);
 }
 .hero-text-box{
     position: absolute;
@@ -245,6 +253,9 @@ background: #14a58c;
 .social-link ul li a:link{
     color: #fff;
 }
+.social-link, .fa, .fab,.fal, .far, .fas{
+    color: #fff;
+}
 .social-link ul li a:link i::before{
     background: #bdd1df;
     width: 2rem;
@@ -269,6 +280,18 @@ transform: rotate(360deg);
     background:linear-gradient(rgba(231, 241, 248, 0.9), rgba(231, 241, 248, 0.9)), url(img/skill-bg.jpg);
 }
 
+.skill-section h2{
+    color: #000;
+}
+.skill-section .little-description{
+    color: #000;
+}
+.skill-section h3{
+    color: #000;
+}
+.skill-section h2::after{
+    color: #000;
+}
 svg.web-design circle{
     stroke: #30bae7;
 }
@@ -281,6 +304,9 @@ svg.graphic-design circle{
 svg.ui-ux circle{
     stroke: #eb7d4b;
 }
+svg.radial-progress text{
+    fill: #000;
+}
 /* =============== */
 /* header Component */
 /* =============== */
@@ -292,6 +318,9 @@ svg.ui-ux circle{
     background-attachment: fixed;
     text-align: center;
 
+}
+.portfolio-section .little-description{
+color: #000;
 }
 .portfolio-section h2{
     color: #3c4761;
@@ -320,7 +349,7 @@ svg.ui-ux circle{
 }
 .portfolio-image{
     width: 100%;
-    height: 30rem;
+    height: auto;
 }
 .portfolio-section .col:nth-child(3){
     margin-left: 0;
@@ -331,4 +360,121 @@ svg.ui-ux circle{
 }
 .portfolio-section .mixitup-control-active{
     background: #fff;
+}
+
+/* testimonial section */
+
+.testimonial-section{
+    background: linear-gradient(rgba(215, 70, 128, 0.9),rgba(215, 70, 128, 0.9)), url(img/testimonial-bg.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    text-align: center;
+    
+}
+.testimonial-section .little-description{
+    text-align: center;
+}
+.testimonial-section .col:nth-child(3){
+    margin: 0;
+}
+.testimonial-section .col:nth-child(1),
+.testimonial-section .col:nth-child(2){
+margin-top: 4rem;
+}
+.testimonial-section .col:nth-child(3),
+.testimonial-section .col:nth-child(4){
+margin-top: 8rem;
+}
+.client-photo{
+width: 8rem;
+float: left;
+}
+.client-photo img{
+height: 8rem;
+border-radius: 50%;
+margin-bottom: 3rem;
+}
+.client-review{
+    width: 35rem;
+    float: left;
+}
+.client-review p{
+    font-size: 2.1rem;
+    font-style: italic;
+    margin-top: 0;
+    color: #fff;
+    margin-right: 0.1rem;
+    margin-bottom: 2rem;
+    text-align: start;
+}
+.client-review .role{
+    color: #f7dca5;
+}
+/* <!-- contact Section starts here --> */
+.contact-section{
+    text-align: center;
+ background: linear-gradient(rgba(60,84, 153, 0.9),rgba(60,84, 153, 0.9)), url(img/contact-bg.jpg);
+ background-repeat: no-repeat;
+ background-position: center 40%;
+ background-attachment: fixed;
+ background-size: cover;
+}
+.contact-section h2::after{
+background: #273a71;
+}
+.contact-section .little-description{
+    color: #fff;
+}
+.contact-section form{
+    margin-top: 5rem;
+    width: 70%;
+    margin-left: 15%;
+}
+.contact-section input[type="text"],
+.contact-section input[type="email"],
+.contact-section textarea {
+    background: #273a71;
+    border: .1rem solid #273a71;
+    width: 100%;
+    padding: 1.5rem;
+    border-radius: .5rem;
+    font-size: 1.8rem;
+    color: #fff;
+    margin: .5rem 0;
+}
+.contact-section form ::placeholder{
+    color: #fff;
+    opacity: 1;
+}
+.contact-section textarea{
+    height: 20rem;
+}
+.btn-sumbit {
+    border: 0;
+    border-bottom: .3rem solid #299ec5;
+    background: #30bae7;
+    cursor: pointer;
+}
+.btn-submit:hover{
+cursor: pointer;
+}
+.footer-section{
+    background: #344b8e;
+    padding: 3rem 0;
+    text-align: center;
+    border-top: 0.1rem solid rgba(255, 255, 255, 0.3);
+}
+.footer-section li{
+    display: inline-block;
+    margin: 0 2rem;
+}
+.footer-section li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 2.4rem;
+}
+.footer-section li:hover a{
+    color: #30bae7;
 }
