--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,12 +165,14 @@ header{
     background: rgb(100, 58, 121, 1);
 }
 /* //stcky navigation// */
-.stcky{
+.sticky{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background: rgba(135, 80, 156, 0.9);
+    padding-bottom: 3.3rem;
+    z-index: 9999;
 }
 .hero-text-box{
     position: absolute;
