browser-compatibility-checked

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,7 @@
 html{
     font-size: 62.5%;
     scroll-behavior: smooth;
-    height: 85vh;
+    
 }
 body {
     font-family: 'Titillium Web', sans-serif;
@@ -175,9 +175,7 @@ header{
     left: 0;
     width: 100%;
     background: rgba(135, 80, 156, 0.9);
-    padding: 2rem 0;
-    z-index: 9999;
-    
+    z-index: 9999;  
 }
 .m-0{
     margin: 0 !important;
@@ -193,6 +191,58 @@ header{
 .btn-hero:visited{
     background: #eb7d4b;
     border-color: #c86a40;
+}
+/* Mobile Menu */
+.mobile-menu span{
+color: #fff;
+font-size: 4rem;
+float: right;
+margin-top: 2rem;
+display: none;
+}
+.mobile-menu span:hover{
+    cursor: pointer;
+}
+.overlay{
+    width: 0;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1;
+    overflow-x: hidden;
+    transition: .5s;
+}
+.overlay-content{
+    position: relative;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+   
+}
+.overlay a{
+    text-decoration: none;
+    display: block;
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing:.3rem;
+    color: #999;
+    padding: 1rem 0;
+}
+.overlay a:hover{
+color: #fff;
+}
+.overlay .closebtn{
+    position: absolute;
+    top: 0;
+    right: 4.5rem;
+    font-size: 6rem;
+}
+
+.sticky .mobile-menu span{
+    margin: 0;
+    line-height: 1;
 }
 
 /* =============== */
@@ -350,7 +400,7 @@ color: #000;
     border-radius: 0.5rem;
     text-transform: uppercase;
     color: #3c4761;
-    margin: 0 0.5rem;
+    margin: 0.5rem;
     transition: .5s;
 }
 .portfolio-filter button:hover{
