--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -4,6 +4,9 @@
     }
 }
 @media only screen and (max-width:1024px){
+    .mobile-menu span{
+         display: block;
+    }
     header{
         height: 55vh;
     }
